# theatre-api

./: .editorconfig  .env.sample  .env.template  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
accounts/: models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py
core/: asgi.py  settings.py  urls.py  wsgi.py
theatre/: admin.py  models.py  path_utils.py  permissions.py  serializers.py  urls.py  views.py
theatre/management/commands/: wait_for_db.py
theatre/migrations/: 0001_initial.py  0002_alter_theatrehall_options.py  0003_actor_photo_play_poster.py
theatre/tests/: test_theatre_api.py
utils/: config.py
