[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["DMYTRO YURCHYSHYN <gost0371337@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
python-dotenv = "^1.0.1"
django-jazzmin = "^3.0.1"
makefile = "^1.1.0"
flake8 = "7.0.0"
pyproject-flake8 = "^7.0.0"
flake8-quotes = "^3.4.0"
djangorestframework-simplejwt = "^5.3.1"
django-debug-toolbar = "^4.4.6"
drf-spectacular = "^0.28.0"
pillow = "^11.0.0"
coverage = "^7.6.10"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 79
inline-quotes = "double"
exclude = [".venv", ".git", "__pycache__", "migrations", "settings.py"]
extend-ignore = ["E203"]

[tool.isort]
multi_line_output = 3
line_length = 79
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
lines_after_imports = 2
skip = [".venv", ".git", "__pycache__", "migrations", "settings.py"]
